<resources>
    <string name="app_name">PFT</string>
    <string name="logo_imagen">Logo_imagen</string>
    <string name="ingrese_su_email">Ingrese su Email</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pagina_principal">PaginaPrincipal</string>
    <string name="tipo_de_reclamo">Tipo de Reclamo</string>
    <string name="Titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="nombreEventoVME">Nombre de Evento</string>
    <string name="nombreActividadAPE">Nombre de Actividad</string>
    <string name="docente">Docente</string>
    <string name="creditos">Créditos</string>
    <string name="semestre">Semestre</string>
    <string name="itr">ITR</string>
    <string name="usuario">Usuario *</string>
    <string name="correo_institucional">Correo Institucional *</string>
    <string name="contrase_a">Contraseña *</string>
    <string name="agregar">Agregar</string>
    <string name="fecha">Fecha y hora del reclamo</string>
    <string name="buscar_reclamos">Buscar reclamos</string>
    <string name="todo">TODO</string>
    <string name="correo_personal">Correo Personal</string>
    <string name="modificar">Modificar</string>
    <string name="title_activity_vista_principal">VistaPrincipal</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="perfil">Perfil</string>
    <string name="listar_usuarios">Listar Usuarios</string>
    <string name="listar">Listar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="fecha_de_evento">Fecha de evento</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="usuario2">Usuario:</string>
    <string name="titulo">Titulo:</string>
    <string name="datos">Datos:</string>
    <string name="documento">Documento:</string>
    <string name="telefono">Telefono:</string>
    <string name="email">Email:</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="rol">Rol:</string>
    <string name="semestre2">Semestre:</string>
</resources>