<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundLayout"
    tools:context=".Login">

    <!-- Contenedor general -->
    <RelativeLayout
        android:id="@+id/generalContainer"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"> <!-- Ajusta el margen según tus necesidades -->

        <!-- Logo -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="308dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo_imagen"
            android:src="@drawable/logo_student"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <!-- Contenedor con fondo de puntas curvas -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/curvedBackgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_with_curved_corners"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/generalContainer"
        app:layout_constraintBottom_toBottomOf="@+id/contenedorPrincipal">

        <!-- Campo de texto para el email -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:hint="@string/ingrese_su_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:maxLength="70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Campo de texto para la contraseña -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="8dp"
            android:hint="@string/ingrese_su_contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/iniciar_sesi_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>